// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Inbound Metrics for a workload renders initial layout 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <MemoryRouter>
    <Connect(IstioMetricsComponent)
      direction="inbound"
      includeAmbient={false}
      lastRefreshAt={1720526431902}
      namespace="ns"
      object="svc"
      objectType={1}
    />
  </MemoryRouter>
</ContextProvider>
`;

exports[`Metrics for a service renders initial layout 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <MemoryRouter>
    <Connect(IstioMetricsComponent)
      direction="inbound"
      includeAmbient={false}
      lastRefreshAt={1720526431902}
      namespace="ns"
      object="svc"
      objectType={0}
    />
  </MemoryRouter>
</ContextProvider>
`;
